# gitSpecOps

./: .gitignore  AGENTS.md  README.md  github_org_duplicator.py  pyproject.toml  run_setup.bat  run_setup.ps1  run_setup.sh  setup_gitspecops.py
_legacy_sources/: README.md
_legacy_sources/github-org-duplicator/: duplicate.bat  github_org_duplicator.py
docs/: github-org-duplicator.gitignore
gitArchiveUpdater/: archive_diff.py  archive_manager.py  archive_sync.py  archive_updater.py  git_inspect.py  manage-archives.bat  provider_github.py  remote_provider.py  update-archive.bat
github-org-duplicator/: duplicate-github-org.bat  gh_common.py  gh_remote.py  github_org_duplicator.py  local_repos.py  operations.py  tracking.py
scripts/: github-org-duplicator.bat  update_archive.ps1
src/git_spec_ops/: __init__.py  archive_manager.py  archive_updater.py  cli.py
tools/archive-updater/: archive_manager.py  update_archive.ps1
