[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "git-spec-ops"
version = "0.1.0"
description = "Cautious tools for multi-repository Git and GitHub operations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sb4ssman" }]
license = { text = "MIT" }
keywords = ["git", "github", "repository", "archive", "migration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = []

[tool.setuptools]
py-modules = ["setup_gitspecops"]
